sql/item_func.h
@@ -170,6 +170,7 @@ public:
     return null_value; 
   }
   void signal_divide_by_null();
+  void signal_invalid_argument_for_log();
   friend class udf_handler;
   Field *tmp_table_field() { return result_field; }
   Field *tmp_table_field(TABLE *t_arg);
